# Observer-Sample

./: .clang-format  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
src/: EventAccess.hpp  EventBase.cpp  EventBase.hpp  EventConnection.hpp  EventMacro.hpp  EventSender.hpp  HasConnection.hpp  main.cpp
src/core/: BookmarkKind.hpp  BookmarkNode.cpp  BookmarkNode.hpp  BookmarkNodeEvent.hpp  BookmarkNodeVisitor.cpp  BookmarkNodeVisitor.hpp  BookmarkNode_Folder.cpp  BookmarkNode_Folder.hpp  BookmarkNode_Root.cpp  BookmarkNode_Root.hpp  BookmarkNode_Url.cpp  BookmarkNode_Url.hpp  BookmarkNode_UrlEvent.hpp
src/ctrl/: BookmarkItemModelTree.cpp  BookmarkItemModelTree.hpp  BookmarkManager.cpp  BookmarkManager.hpp  BookmarkManagerEvent.hpp  System.cpp  System.hpp
src/gui/: BookmarkEditor.cpp  BookmarkEditor.hpp  BookmarkEditor.ui  BookmarkToolBar.cpp  BookmarkToolBar.hpp  BookmarkTreeWidget.cpp  BookmarkTreeWidget.hpp  BookmarkTreeWidget.ui  BookmarkUrlFactoryDialog.cpp  BookmarkUrlFactoryDialog.hpp  BookmarkUrlFactoryDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
